# dsme

./: .gitignore  .todo  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  Rules.make  autogen.sh  configure.ac  dsme-cal.c  dsme-exec-helper.c  dsme-rd-mode.c  dsme-rd-mode.h  dsme-server.c  dsme-wdd-wd.c  dsme-wdd-wd.h  dsme-wdd.c  dsme-wdd.h  dsme.c  dsme.conf  dsme.init  dsme.init.in  dsme.pc  dsme_dbus_if.pc  dsmesock.c  logging.c  mainloop.c  message.c  modulebase.c  oom.c  protocol.c  reboot-via-dsme.sh  timers.c  verify_version.sh
adhoc/: dummy_bme.c  processwdtest.c
debian/: README.Debian  changelog  control  control-testcases  dsme-dbus.init  dsme-dbus.upstart  dsme-testcases.install  dsme-thermal.upstart  dsme.aegis  dsme.default  dsme.dirs  dsme.init  dsme.install  dsme.postinst  dsme.upstart  libdsme0.2.0-dev.dirs  libdsme0.2.0-dev.install  libdsme0.2.0.install  rules
doc/: thermal_sensor_config_files.txt
dsme/: Makefile.am  dsme  dsme-server  dsme-server.c  dsme-wdd-wd.c  dsme-wdd-wd.h  dsme-wdd.c  dsme.conf  dsmesock.c  logging.c  mainloop.c  modulebase.c  oom.c  timers.c
getbootstate/: Makefile.am  getbootstate.c
include/android/: android_alarm.h
include/dsme/: dsme-cal.h  dsmesock.h  logging.h  mainloop.h  messages.h  modulebase.h  modules.h  oom.h  osso-log.h  protocol.h  timers.h
iphbd/: depend_filter.py  libiphb-uninstalled.pc.in  libiphb.h  libiphb.pc.in
libiphb/: Makefile  Makefile.am  depend_filter.py  hbtest.c  libiphb.c
modules/: Makefile  Makefile.am  alarmtracker.c  batterytracker.c  bootreasonlogger.c  dbusautoconnector.c  dbusproxy.c  dbusproxy.h  diskmonitor.c  diskmonitor.h  diskmonitor_backend.c  diskmonitor_backend.h  dsme_dbus.c  dsme_dbus.h  dsme_dbus_if.c  dsme_dbus_if.h  dsme_wd.c  dsme_wd.h  emergencycalltracker.c  heartbeat.c  heartbeat.h  hwwd.c  hwwd.h  iphb.c  iphb_internal.h  isi_conf.h  lifeguard.c  lifeguard.h  malf.c  malf.h  powerontimer.c  powerontimer.h  powerontimer_backend.c  powerontimer_backend.h  processwd.c  processwd.h  pwrkeymonitor.c  rebootloopdetector.c  runlevel.c  runlevel.h  (+31 more)
obsolete/: dsme-exec-helper.c  lifeguard.c  lifeguard.h
rpm/: dsme-rpmlintrc  dsme.changes  dsme.service  dsme.spec  dsme.yaml
test/: HBTEST  Makefile  Makefile.am  abnormalexitwrapper.c  abnormalexitwrapper_tester.c  dsmetest.c  dummy_bme.c  processwdtest.c  stub_cal.h  stub_dbus.h  stub_dsme_dbus.h  stub_timers.h  testdriver.c  testdriver.h  testmod_alarmtracker.c  testmod_emergencycalltracker.c  testmod_state.c  testmod_usbtracker.c  utils_misc.h
tests/: Makefile.am  tests.xml
util/: Makefile  Makefile.am  batttest.c  bootstate.c  dsmereboot.c  dsmetemperature  dsmetest.c  dsmetool-session  dsmetool.c  kick_wd.c  kicker.c  rpdir.c  thermaltool.c  waitfordsme.c
